--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aura AI Music Player</title>
+  
   <script src="https://cdn.tailwindcss.com"></script>
+  
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+  
   <style>
     body {
       font-family: 'Inter', sans-serif;
       background-color: #050505;
       color: #ffffff;
-      overflow-x: hidden;
       margin: 0;
+      overflow-x: hidden;
     }
-    .font-syncopate {
-      font-family: 'Syncopate', sans-serif;
+    /* Đảm bảo #root luôn cao bằng màn hình để hiển thị nội dung */
+    #root {
+      min-height: 100vh;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
     }
+    
+    .font-syncopate { font-family: 'Syncopate', sans-serif; }
     .glass {
       background: rgba(255, 255, 255, 0.03);
       backdrop-filter: blur(12px);
@@ -26,39 +34,15 @@
     .active-gradient {
       background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
     }
-    ::-webkit-scrollbar {
-      width: 4px;
-    }
-    ::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    ::-webkit-scrollbar-thumb {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 10px;
-    }
-    /* Đảm bảo root chiếm toàn màn hình */
-    #root {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+    ::-webkit-scrollbar { width: 4px; }
+    ::-webkit-scrollbar-track { background: transparent; }
+    ::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "d3": "https://esm.sh/d3@^7.9.0"
-  }
-}
-</script>
-</head>
+
+  </head>
 <body>
   <div id="root"></div>
-  <!-- Entry point kích hoạt ứng dụng React -->
-  <script type="module" src="index.tsx"></script>
+
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
