--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aura AI Music Player</title>
-  
   <script src="https://cdn.tailwindcss.com"></script>
-  
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
-  
   <style>
     body {
       font-family: 'Inter', sans-serif;
       background-color: #050505;
       color: #ffffff;
-      margin: 0;
       overflow-x: hidden;
+      margin: 0;
     }
-    /* Đảm bảo #root luôn cao bằng màn hình để hiển thị nội dung */
-    #root {
-      min-height: 100vh;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
+    .font-syncopate {
+      font-family: 'Syncopate', sans-serif;
     }
-    
-    .font-syncopate { font-family: 'Syncopate', sans-serif; }
     .glass {
       background: rgba(255, 255, 255, 0.03);
       backdrop-filter: blur(12px);
@@ -34,15 +26,39 @@
     .active-gradient {
       background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
     }
-    ::-webkit-scrollbar { width: 4px; }
-    ::-webkit-scrollbar-track { background: transparent; }
-    ::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
+    ::-webkit-scrollbar {
+      width: 4px;
+    }
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+    }
+    #root {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
   </style>
-
-  </head>
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "d3": "https://esm.sh/d3@^7.9.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+  }
+}
+</script>
+</head>
 <body>
   <div id="root"></div>
-
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
