--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
     .active-gradient {
       background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
     }
+    
+    /* Cải thiện thanh cuộn - To hơn và dễ nắm bắt hơn */
     ::-webkit-scrollbar {
-      width: 4px;
+      width: 10px;
     }
     ::-webkit-scrollbar-track {
-      background: transparent;
+      background: rgba(0, 0, 0, 0.2);
     }
     ::-webkit-scrollbar-thumb {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(99, 102, 241, 0.3);
       border-radius: 10px;
+      border: 2px solid transparent;
+      background-clip: content-box;
     }
+    ::-webkit-scrollbar-thumb:hover {
+      background: rgba(99, 102, 241, 0.6);
+      border: 2px solid transparent;
+      background-clip: content-box;
+    }
+
     #root {
       min-height: 100vh;
       display: flex;
